force-app/main/default/objects/SystemLog__c/SystemLog__c.object-meta.xml
<CustomObject>
    <description>Objeto para registrar información en la ejecucuón de clases APEX</description>
    <label>System Log</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>System Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>