force-app/main/default/objects/SystemLog__c/fields/HasErrors__c.field-meta.xml
<CustomField>
    <fullName>HasErrors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Errors?</label>
    <type>Checkbox</type>
</CustomField>