force-app/main/default/objects/SystemLog__c/fields/InputData__c.field-meta.xml
<CustomField>
    <fullName>InputData__c</fullName>
    <description>Campo para registrar información de entrada como un JSON o un XML recibido.</description>
    <label>Input Data</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>