force-app/main/default/objects/SystemLog__c/fields/LogLines__c.field-meta.xml
<CustomField>
    <fullName>LogLines__c</fullName>
    <description>Texto del log en HTML.</description>
    <label>Log Lines</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>