force-app/main/default/objects/SystemLog__c/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <formula>ScenarioId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scenario</label>
    <type>Text</type>
</CustomField>