force-app/main/default/objects/SystemLog__c/fields/ScenarioId__c.field-meta.xml
<CustomField>
    <fullName>ScenarioId__c</fullName>
    <label>Scenario Id</label>
    <referenceTo>SystemLogScenario__c</referenceTo>
    <relationshipLabel>System Logs</relationshipLabel>
    <relationshipName>System_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>