force-app/main/default/objects/SystemLog__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Summary line</description>
    <label>Summary</label>
    <length>60</length>
    <type>Text</type>
</CustomField>