force-app/main/default/objects/SystemLog__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <description>Texto libre para clasificar los logs</description>
    <label>Tag</label>
    <length>30</length>
    <type>Text</type>
</CustomField>