force-app/main/default/objects/SystemLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Scenario__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>HasErrors__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>