force-app/main/default/objects/SystemLog__c/listViews/Google_Leads.listView-meta.xml
<ListView>
    <fullName>Google_Leads</fullName>
    <columns>NAME</columns>
    <columns>Scenario__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>HasErrors__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scenario__c</field>
        <operation>equals</operation>
        <value>GOOGLE_LEAD</value>
    </filters>
    <label>Google Leads</label>
</ListView>