force-app/main/default/objects/SystemLog__c/listViews/Porsamarket.listView-meta.xml
<ListView>
    <fullName>Porsamarket</fullName>
    <columns>NAME</columns>
    <columns>Scenario__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>HasErrors__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scenario__c</field>
        <operation>equals</operation>
        <value>SYNCPORSAMARKET</value>
    </filters>
    <label>Porsamarket</label>
</ListView>